WRP-1175 - fix on sidebar padding and alignment

--- a/app/styles/dark.scss
+++ b/app/styles/dark.scss
@@ -82,6 +82,7 @@
     background: #2d3134!important;
 }
 /*button colors */
+.sca-dark .grey.darken-3{background-color: #383d40 !important;}
 .sca-dark .red {
     color: #e92848;
     background-color: transparent;
